syntax = "proto3";

package ON.Fragments.Content.Stats;

import "google/protobuf/timestamp.proto";

message StatsContentPublicRecord {
    string ContentID = 1;
	uint64 Version = 2;
	uint64 Likes = 11;
	uint64 Saves = 12;
	uint64 Shares = 13;
	uint64 Views = 14;
}

message StatsContentPrivateRecord {
    string ContentID = 1;
	uint64 Version = 2;
	repeated string LikedBy = 11;
	repeated string SavedBy = 12;
	repeated string SharedBy = 13;
	repeated string ViewedBy = 14;
}

message StatsUserPublicRecord {
    string UserID = 1;
	uint64 Version = 2;
	uint64 Likes = 11;
	uint64 Saves = 12;
	uint64 Shares = 13;
	uint64 Views = 14;
}

message StatsUserPrivateRecord {
    string UserID = 1;
	uint64 Version = 2;
	repeated string Likes = 11;
	repeated string Saves = 12;
	repeated string Shares = 13;
	repeated string Views = 14;
	repeated UserProgressRecord ProgressRecords = 15;
}

message UserProgressRecord {
	string ContentID = 1;
	float Progress = 2;
	google.protobuf.Timestamp UpdatedOnUTC = 3;
}
